try to fix weird alignment with image on responsive switch

--- a/src/global.module.scss
+++ b/src/global.module.scss
@@ -115,7 +115,7 @@ $filter_top_desktop: 100px;
   align-items: flex-start;
 }
 
-@media (min-width: 900px) {
+@media (min-width: 800px) {
 
   .row {
     display: flex;
